Closed Bug 17928 Opened 26 years ago Closed 26 years ago

undo is not working on the thread pane

Categories

(MailNews Core :: Backend, defect, P3)

All
Mac System 8.6
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: hangas, Assigned: jefft)

References

Details

Now that the UI for undo has be enabled again, it turns out that undo is broken. It looks like the undo transaction is not created during the process (e.g. move) that should support undo. This should be marked as an M11 blocker based on the logic that if the UI for this feature was an M11 blocker, the feature would be the same.
Status: NEW → ASSIGNED
Hardware: Macintosh → All
Target Milestone: M11
We broke this due to the introduction of nsIMsgWindow. We have pretty good ideas how to fix it. The fix will be ready shortly.
Depends on: 16189
Fixes in hand but waiting for 16189 to work.
Depends on: 17848
Now I am waiting for 17848 to work.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Fix checked in. We are now creating transaction manager in nsMsgWindow.cpp instead of nsMessenger.cpp. The fixes to bug 16189 & 17848 still not working for me. I am testing it with my own hacks to the messenger.xul and widgetglue.js. Paul you might want to investigate it again. Here is the hack if anyone want to try out the fix. Index: messenger.xul =================================================================== RCS file: /cvsroot/mozilla/mailnews/base/resources/content/messenger.xul,v retrieving revision 1.90 diff -c -r1.90 messenger.xul *** messenger.xul 1999/11/05 02:21:41 1.90 --- messenger.xul 1999/11/05 04:42:21 *************** *** 168,175 **** <menu id="menu_Edit"> <menupopup> ! <menuitem id="menu_undo"/> ! <menuitem id="menu_redo"/> <menuseparator/> <menuitem id="menu_cut"/> <menuitem id="menu_copy"/> --- 168,175 ---- <menu id="menu_Edit"> <menupopup> ! <menuitem value="Undo" oncommand="MsgUndo();"/> ! <menuitem value="Redo" oncommand="MsgRedo();"/> <menuseparator/> <menuitem id="menu_cut"/> <menuitem id="menu_copy"/> Index: widgetglue.js =================================================================== RCS file: /cvsroot/mozilla/mailnews/base/resources/content/widgetglue.js,v retrieving revision 1.62 diff -c -r1.62 widgetglue.js *** widgetglue.js 1999/11/05 02:21:47 1.62 --- widgetglue.js 1999/11/05 04:42:22 *************** *** 173,182 **** --- 173,184 ---- break; case "cmd_undo": + dump("undoing...\n"); messenger.Undo(); break; case "cmd_redo": + dump("redoing...\n"); messenger.Redo(); break; } *************** *** 350,355 **** --- 352,369 ---- var srcFolder = GetThreadTreeFolder(); messenger.CopyMessages(tree.database, srcFolder, destFolder, messageList, false); } + } + + function MsgUndo() + { + dump("undoing....\n"); + messenger.Undo(); + } + + function MsgRedo() + { + dump("redoing....\n"); + messenger.Redo(); } function MsgMoveMessage(destFolder)
Can't test this until 16189 is completely fixed, currently with builds 1999110808 on win32 and linux this is still broken per bug comment by fenella on 11/08. Mac works for Move and Copy without resetting focus in Thread pane, but with Delete you have to reset focus in Thread pane by double clicking on a message, then you can undo the Delete
From esther's comment, my comments on bug 16189 was not clear. To make this more clearly, here is the summary: Mac: POP/IMAP undo/Redo works for Move and Copy, and Delete without resetting focus in Thread pane. Linux and Win Nt 4.0:POP/IMAP: undo/redo does not work for Move and Copy, and Delete even though I set focus in Thread pane. (When I set focus in thread pane, although undo/redo is bolded, but it does not work)
QA Contact: lchiang → fenella
Status: RESOLVED → VERIFIED
Linux Redhat 6.0 (1999-11-10-17 M11) Win_nt 4.0 (1999-11-10-17 M11) POP/IMAP; Undo/Redo works fine on Delete/Copy/Move now on both Linux and Win Nt. No problem with the thread pane now. I do not have to set focus in the thread pane to make the Undo/Redo bold.
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.